modify : add -moz-

--- a/photo.css
+++ b/photo.css
@@ -68,6 +68,7 @@ body{
     margin: auto;
     transition: all 10s;
     transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
     transform: rotateX(0deg) rotateY(-3deg); 
     animation: rot 20s linear 0s infinite normal 
 
@@ -339,6 +340,7 @@ body{
       margin: auto;
       transition: all 10s;
       transform-style: preserve-3d;
+      -moz-transform-style: preserve-3d;
       transform: rotateX(0deg) rotateY(-3deg); 
       animation: rot 20s linear 0s infinite normal;
       /* display:none */
